--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
         <title>Sign Up Form</title>
         <script src="./script.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <div class="bg-img-container">
+            <div class="logo-container"></div>
+        </div>
+        <div class="form-container"></div>
+    </body>
 </html>
