feat:Add logo and its title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div class="bg-img-container">
-            <div class="logo-container"></div>
+            <div class="logo-container">
+                <img src="./images/odin-lined.png" alt="Odin Face lol">
+                <h1>ODIN</h1>
+            </div>
         </div>
         <div class="form-container"></div>
     </body>
