--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <img src="./images/odin-lined.png" alt="Odin Face lol">
                 <h1>ODIN</h1>
             </div>
+            <div>
+                <p>By Diego Delso, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=21175158">Link</a></p>
+            </div>
         </div>
         <div class="form-container"></div>
     </body>
