feat:Add random header text before form element

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <p>By Diego Delso, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=21175158">Link</a></p>
             </div>
         </div>
-        <div class="form-container"></div>
+        <div class="form-container">
+            <div class="lorem-ipsum-text">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores ab, aliquid assumenda magni suscipit tempora totam provident. Eum perspiciatis dolore repellendus, natus vero sunt quas neque tempore minima culpa expedita.</h2>
+                <h2>asdbhdbajabdsab</h2>
+            </div>
+        </div>
     </body>
 </html>
