feat:Add form, fieldset and legend tags

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <div class="lorem-ipsum-text">
                 <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores ab, aliquid assumenda magni suscipit tempora totam provident. Eum perspiciatis dolore repellendus, natus vero sunt quas neque tempore minima culpa expedita.</h2>
                 <h2>asdbhdbajabdsab</h2>
+                <form action="" method="get">
+                    <fieldset>
+                        <legend>LET'S A GOO!! WAHOO</legend>
+                    </fieldset>
+                </form>
             </div>
         </div>
     </body>
