feat:Add input container div

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <fieldset>
                     <legend>LET'S A GOO!! WAHOO</legend>
                 </fieldset>
+                <div class="input-container">
+                    <div><label for=""></label><input type="text"></div>
+                </div>
             </form>
         </div>
     </body>
