--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
                     <legend>LET'S A GOO!! WAHOO</legend>
                 </fieldset>
                 <div class="input-container">
-                    <div><label for=""></label><input type="text"></div>
+                    <div>
+                        <label for="first-name">First Name</label>
+                        <input type="text" id="first-name" name="first-name" required placeholder="ex:Andrew" pattern="/^[A-Za-z]+$/">
+                    </div>
+                    <div>
+                        <label for="last-name">Last Name</label>
+                        <input type="text" id="last-name" name="last-name" required pattern="/^[A-Za-z]+$/" placeholder="ex:Alfonso">
+                    </div>
+                    <div>
+                        <label for="email-address">Email Address</label>
+                        <input type="email" id="email-address" name="email-address" placeholder="isodjsdoj@gmail.com" required>
+                    </div>
+                    <div>
+                        <label for="phone-number">Phone Number</label>
+                        <input type="tel" id="phone-number" name="phone-number" required placeholder="929-138-2874" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$">
+                    </div>
+                    <div>
+                        <label for="passwrd">Password</label>
+                        <input type="password" id="passwrd" name="passwrd" required>
+                    </div>
+                    <div>
+                        <label for="confirm-pass">Confirm Password</label>
+                        <input type="password" id="confirm-pass" name="confirm-pass" required>
+                    </div>
                 </div>
             </form>
         </div>
