--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     </div>
                 </div>
             </form>
+            <div class="button-container">
+                <button class="submit-btn" type="submit">Create Account</button>
+            </div>
         </div>
     </body>
 </html>
