--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="input-container">
                     <div>
                         <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" name="first-name" required placeholder="ex:Andrew" pattern="/^[A-Za-z]+$/">
+                        <input type="text" id="first-name" name="first-name" required placeholder="ex:Andrew" pattern="[A-Za-z]+$">
                     </div>
                     <div>
                         <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" name="last-name" required pattern="/^[A-Za-z]+$/" placeholder="ex:Alfonso">
+                        <input type="text" id="last-name" name="last-name" required pattern="[A-Za-z]+$" placeholder="ex:Alfonso">
                     </div>
                     <div>
                         <label for="email-address">Email Address</label>
