--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                     </div>
                     <div>
                         <label for="passwrd">Password</label>
-                        <input type="password" id="passwrd" name="passwrd" required>
+                        <input class="error" type="password" id="passwrd" name="passwrd" required>
                     </div>
                     <div>
                         <label for="confirm-pass">Confirm Password</label>
-                        <input type="password" id="confirm-pass" name="confirm-pass" required>
+                        <input class="error" type="password" id="confirm-pass" name="confirm-pass" required>
                     </div>
                 </div>
             </form>
